css/main.css
/* ... */
.owl-carousel .owl-stage {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.owl-carousel .owl-item img,
.owl-carousel .owl-item embed {
  width: auto;
  height: 100%;
}

#fly {
  position: relative;
  padding: 1em;
  text-align: right;
  max-width: 1000px;
  margin: 0 auto;
}
@media (max-width: 826px) {
  #fly {
    padding-top: 240px;
    text-align: center;
  }
}
#fly h2 {
  display: inline-block;
  line-height: 0.8;
  font-size: 4.6em;
}
#fly h2 .right {
  display: inline-block;
  -webkit-transform: translateY(-30px);
  transform: translateY(-30px);
}
@media (max-width: 490px) {
  #fly h2 .right {
    -webkit-transform: translateY(-22px);
    transform: translateY(-22px);
  }
}
@media (max-width: 392px) {
  #fly h2 .right {
    -webkit-transform: translateY(-18px);
    transform: translateY(-18px);
  }
}
@media (max-width: 1080px) {
  #fly h2 {
    font-size: 3.9em;
  }
}
@media (max-width: 392px) {
  #fly h2 {
    font-size: 3.2em;
  }
}
#fly .marcar-reuniao {
  font-family: "Dosis", sans-serif;
  font-size: 1.6em;
  display: inline-block;
  margin-right: 10%;
}
@media (max-width: 1080px) {
  #fly .marcar-reuniao {
    font-size: 1.35em;
  }
}
@media (max-width: 826px) {
  #fly .marcar-reuniao {
    margin-right: 0;
  }
}
@media (max-width: 392px) {
  #fly .marcar-reuniao {
    font-size: 1.1em;
  }
}
#fly .marcar-reuniao:hover {
  color: #3e9995;
  border-color: #3e9995;
}

.hero-color {
  color: #3e9995;
}

.left {
  font-size: 0.5em;
  display: inline-block;
  margin-right: 85%;
}

.right {
  font-size: 0.5em;
  display: inline-block;
  margin-right: 2%;
}
@media (max-width: 826px) {
  .right {
    margin-right: 0;
    margin-left: 48%;
  }
}

.suit-hero {
  position: absolute;
  height: 840px;
  width: auto;
  left: 0;
  top: -140px;
}
@media (max-width: 1200px) {
  .suit-hero {
    left: 3%;
  }
}
@media (max-width: 850px) {
  .suit-hero {
    left: 3%;
    height: 740px;
  }
}
@media (max-width: 826px) {
  .suit-hero {
    height: 440px;
    left: 20%;
  }
}
@media (max-width: 392px) {
  .suit-hero {
    height: 380px;
    left: 10%;
    top: -125px;
  }
}

#email-form {
  position: absolute;
  position: fixed;
  z-index: 1000;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto auto;
  background: #121212;
  width: 95%;
  height: 95%;
  max-width: 450px;
  max-height: 540px;
  padding: 1em;
  border: 2px solid #3e9995;
  border-radius: 10px;
}
#email-form .menu-btn-form {
  position: absolute;
  z-index: 100;
  right: 10px;
  top: 10px;
  cursor: pointer;
  display: block;
}
#email-form .menu-btn-form .btn-line {
  margin-left: 100%;
  width: 28px;
  height: 3px;
  margin: 0 0 5px 0;
  background-color: #e8e8e8;
}
#email-form .menu-btn-form .btn-line:nth-child(1) {
  -webkit-transform: rotate(45deg) translate(5px, 5px);
  transform: rotate(45deg) translate(5px, 5px);
}
#email-form .menu-btn-form .btn-line:nth-child(2) {
  opacity: 0;
}
#email-form .menu-btn-form .btn-line:nth-child(3) {
  -webkit-transform: rotate(-45deg) translate(7px, -6px);
  transform: rotate(-45deg) translate(7px, -6px);
}
#email-form .menu-btn-form.close {
  -webkit-transform: rotate(180deg);
  transform: rotate(180deg);
}
#email-form embed {
  display: block;
  margin: 10px auto;
}
#email-form input {
  margin: 10px auto;
  display: block;
  width: 100%;
  padding: 5px;
  border-radius: 10px;
}
#email-form textarea {
  width: 100%;
  border-radius: 10px;
  resize: none;
  height: 80px;
}
#email-form input[type="text"],
#email-form input[type="email"],
#email-form textarea {
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  outline: none;
  margin: 5px 1px 3px 0px;
  border: 1px solid #dddddd;
}
#email-form input[type="text"]:focus,
#email-form input[type="email"]:focus,
#email-form textarea:focus {
  -webkit-box-shadow: 0 0 5px #3e9995;
  box-shadow: 0 0 5px #3e9995;
  margin: 5px 1px 3px 0px;
  border: 1px solid #3e9995;
}
#email-form input[type="submit"] {
  background: #3e9995;
  border-color: #378783;
  color: #e8e8e8;
}

.hide-form {
  display: none;
}

footer {
  background: #000;
  margin-top: 16em;
}
@media (max-width: 850px) {
  footer {
    margin-top: 13em;
  }
}
@media (max-width: 826px) {
  footer {
    margin-top: 4em;
    width: 100%;
    max-width: 100%;
  }
}
footer .footer-container {
  background: url(../img/brand/triangle.svg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: 300px 300px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: distribute;
  justify-content: space-around;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1400px;
  margin: 0 auto;
}
@media (max-width: 590px) {
  footer .footer-container {
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    width: 100%;
  }
  footer .footer-container .contact,
  footer .footer-container .logo,
  footer .footer-container .icons {
    margin: 15px;
    width: 40%;
  }
  footer .footer-container .logo {
    -webkit-box-ordinal-group: 2;
    -ms-flex-order: 1;
    order: 1;
  }
  footer .footer-container .icons {
    -webkit-box-ordinal-group: 3;
    -ms-flex-order: 2;
    order: 2;
  }
  footer .footer-container .contact {
    -webkit-box-ordinal-group: 4;
    -ms-flex-order: 3;
    order: 3;
  }
}
footer .footer-container .contact,
footer .footer-container .logo,
footer .footer-container .icons {
  width: 33.33%;
}
@media (max-width: 590px) {
  footer .footer-container {
    background: none;
  }
}
footer .icons div {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
footer .icons div img {
  display: inline-block;
  width: 40px;
  height: auto;
  cursor: pointer;
}
footer .icons div img:nth-child(1) {
  margin-left: auto;
  margin-right: 10px;
}
footer .icons div img:nth-child(2) {
  margin-right: auto;
  margin-left: 10px;
}
footer .logo embed {
  width: 125px;
  height: auto;
  display: block;
  margin: 0 auto;
}
/* ... */

